# gem2-cad-tel

./: .gitignore  CLAUDE.md  README.en.md  README.md  pyproject.toml  requirements.txt
.claude/: TPMN-SKILL-STANDARD.md  settings.json
.gem-squared/: alarm.md  crawl_summary.json
.gem-squared/verify-work-logs/: WP-ST-6.md  WP-ST-7.md  WP-ST-8.md
.gem-squared/work-plan/: WP-ST-1.md  WP-ST-2.md  WP-ST-3.md  WP-ST-4.md  WP-ST-5.md  WP-ST-6.md  WP-ST-7.md  WP-ST-8.md
.streamlit/: config.toml
data/provenance/: synth_apt_kr_balcony_01.json  synth_apt_kr_balcony_02.json  synth_apt_kr_balcony_03.json  synth_apt_simple_01.json  synth_apt_simple_02.json  synth_apt_simple_03.json  synth_apt_three_room_01.json  synth_apt_three_room_02.json  synth_apt_three_room_03.json  synth_office_open_01.json  synth_office_open_02.json  synth_office_open_03.json  wm_02_bro_park_2000.json  wm_02l.json  wm_03l.json  (+35 more)
deploy/: .dockerignore  Caddyfile  Dockerfile  bootstrap.sh  deploy.sh  docker-compose.yml
docs/: AUDIT.md  CORPUS.md  DEMO_SCENARIOS.md  DEPLOY.md  OUTPUT_CONTRACT.md  POBICON_PITCH.ko.md  README.md
scripts/: build_corpus.py  crawl_corpus.py
tests/: test_audit_cli.py  test_audit_context.py  test_audit_schema.py  test_audit_streamlit_queries.py  test_compose.py  test_corpus.py  test_corpus_crawl.py  test_corpus_pipeline_smoke.py  test_crawl_client.py  test_crawl_download.py  test_geometry.py  test_ingest.py  test_ocr.py  test_pipeline_audit.py  test_schema.py  test_smoke_env.py  test_symbols.py  test_ui_app_default_sample.py  test_ui_preview.py
ui/: app.py
(+15 files in other folders)
