[project]
name = "cad-trust-engine-lite"
version = "0.1.0"
description = "CAD Trust Engine Lite — auditable PNG/PDF floor plan reader for 포비콘 application MVP"
requires-python = ">=3.11"
authors = [{ name = "David Seo of GEM².AI", email = "david@gineers.ai" }]
license = { text = "Proprietary" }
readme = "README.md"

dependencies = [
    # opencv-python-headless: no X11 system libs needed (works in containers, Streamlit Cloud, etc.)
    # Functionally identical to opencv-python for our code (no cv2.imshow / cv2.waitKey usage).
    "opencv-python-headless>=4.10.0",
    "numpy>=1.26,<2.2",
    "pdf2image>=1.17.0",
    "pillow>=10.4.0",
    "pydantic>=2.8.0",
    "streamlit>=1.38.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "paddleocr>=2.8.0",
    "paddlepaddle>=2.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cad_trust"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"
